Fix text overlapping on responsive (#22)

--- a/edly_kwl/static/css/edly_kwl.css
+++ b/edly_kwl/static/css/edly_kwl.css
@@ -136,7 +136,7 @@ body.courseware .course-wrapper.rtl-content .column h2,
 }
 
 @media only screen and (max-width: 990px) {
-    .edly_kwl_block .column .description { height: 115px; }
+    .edly_kwl_block .column .description { height: 130px; }
 }
 
 @media only screen and (max-width: 800px) {
